--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": ">=16.8.0"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.0",
     "@babel/core": "^7.15.0",
     "@storybook/addon-actions": "^6.3.7",
     "@storybook/addon-essentials": "^6.3.7",
@@ -42,10 +43,13 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "*.+(js|jsx|ts|tsx)": "eslint --fix"
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
