--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react": ">=16.8.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.0",
     "@babel/core": "^7.15.0",
     "@storybook/addon-actions": "^6.3.7",
     "@storybook/addon-essentials": "^6.3.7",
     "@storybook/addon-links": "^6.3.7",
     "@storybook/react": "^6.3.7",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^27.0.0",
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
@@ -36,6 +38,7 @@
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
+    "ts-jest": "^27.0.4",
     "typescript": "^4.2.4"
   },
   "dependencies": {
