--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc",
     "start": "tsc -w",
     "test": "jest",
+    "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -27,6 +28,7 @@
     "@types/jest": "^27.0.0",
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.5",
+    "@types/testing-library__jest-dom": "^5.14.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "babel-loader": "^8.2.2",
@@ -39,7 +41,9 @@
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ts-jest": "^27.0.4",
+    "ts-node": "^10.2.0",
     "typescript": "^4.2.4"
   },
   "dependencies": {
