--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,14 @@
     "declaration": true,
     "module": "commonjs",
     "target": "es5",
-    "types": ["react", "node"],
+    "types": ["react", "node", "jest", "@testing-library/jest-dom"],
     "lib": ["es6", "dom", "es2016", "es2017"],
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "outDir": "./dist",
+    "jsx": "react"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "src/**/*.test.ts", "src/**/*.test.tsx"]
