--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^27.0.0",
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.5",
+    "@types/styled-components": "^5.1.12",
     "@types/testing-library__jest-dom": "^5.14.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
@@ -42,6 +43,7 @@
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.2.0",
     "typescript": "^4.2.4"
