Create storybook deployment to github pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,11 @@
     "jsx": "react"
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "src/**/*.test.ts", "src/**/*.test.tsx"]
+  "exclude": [    
+    "node_modules",
+    "src/**/*.test.ts", 
+    "src/**/*.test.tsx", 
+    "src/**/*.stories.tsx",
+    "src/shared_styled_components"
+  ]
 }
