--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "start": "tsc -w",
     "test": "jest",
     "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -o docs-build"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
@@ -47,6 +47,9 @@
     "ts-jest": "^27.0.4",
     "ts-node": "^10.2.0",
     "typescript": "^4.2.4"
+  },
+  "resolutions": {
+    "@types/react": "^17.0.5"
   },
   "dependencies": {
     "focus-trap": "^6.4.0"
