--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "src/**/*.test.ts", 
     "src/**/*.test.tsx", 
     "src/**/*.stories.tsx",
-    "src/shared_styled_components"
+    "src/shared_styled_components",
+     "src/**/*.styles.ts"
   ]
 }
