--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "outDir": "./dist",
     "jsx": "react"
   },
-  "include": ["src/**/*.ts", "src/hooks/drawer/drawer.component.tsx"],
+  "include": ["src/**/*.ts"],
   "exclude": [    
     "node_modules",
     "src/**/*.test.ts", 
