--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "aria-hooks",
-  "version": "0.1.0",
+  "name": "@actum-digital/aria-hooks",
+  "version": "0.0.3",
   "description": "Collection of hooks with props to assist with creation of accessible components",
   "main": "dist/index.js",
   "author": "Nic Reichert",
