--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Nic Reichert",
   "license": "MIT",
   "private": false,
+  "repository": "https://github.com/actum/aria-hooks",
+  "homepage": "https://actum.github.io/aria-hooks/",
   "scripts": {
     "build": "rm -rf dist && tsc",
     "start": "tsc -w",
