Create new docs format (#10)
* Create new docs format

* Create docs for modal

* Create docs for listbox

* Improve docs on listbox

* Fixes

* Restructure

* Fixes

* Remove docs tab

* Create tooltip docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "src/**/*.test.ts", 
     "src/**/*.test.tsx", 
     "src/**/*.stories.tsx",
-    "src/shared_styled_components",
-     "src/**/*.styles.ts"
+    "src/**/*.styles.ts",
+    "src/**/*.component.tsx",
+    "src/styles"
   ]
 }
