--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "storybook-dark-mode": "^1.0.8",
     "styled-components": "^5.3.0",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.2.0",
