--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@storybook/addon-actions": "^6.3.7",
     "@storybook/addon-essentials": "^6.3.7",
     "@storybook/addon-links": "^6.3.7",
+    "@storybook/addons": "^6.3.12",
     "@storybook/react": "^6.3.7",
+    "@storybook/theming": "^6.3.12",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^27.0.0",
@@ -45,6 +47,7 @@
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "storybook-dark-mode": "^1.0.8",
     "styled-components": "^5.3.0",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.2.0",
