--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^9.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "@storybook/addon-actions": "^6.3.7",
     "@storybook/addon-essentials": "^6.3.7",
     "@storybook/addon-links": "^6.3.7",
@@ -47,6 +52,7 @@
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "semantic-release": "^19.0.2",
     "storybook-dark-mode": "^1.0.8",
     "styled-components": "^5.3.0",
     "ts-jest": "^27.0.4",
