--- a/.releaserc
+++ b/.releaserc
@@ -3,7 +3,7 @@
     [
       '@semantic-release/commit-analyzer',
       '@semantic-release/release-notes-generator',
-      '@semantic-release/npm',
+      ['@semantic-release/npm', { 'npmPublish': false }],
       '@semantic-release/changelog',
       '@semantic-release/git',
     ],
