--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,32 +1,25 @@
-name: Publish nmp package
+name: Publish
 on:
   push:
     branches:
       - master
-
 jobs:
-  publish:
+  release:
+    name: Release
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
-          persist-credentials: false
-
-      - name: Install and Build 🔧
-        uses: actions/setup-node@v1
+          fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: 12
-          # Specifies the registry, this field is required!
-          registry-url: https://registry.npmjs.org/
-        # clean install of your projects' deps. We use "npm ci" to avoid package lock changes
-      - run: yarn
-      # upgrade npm version in package.json to the tag used in the release.
-      - run: npm version ${{ github.event.release.tag_name }}
-      # build the project
-      - run: npm run build
-      # publish to NPM -> there is one caveat, continue reading for the fix
-      - run: npm publish
+          node-version: 'lts/*'
+      - name: Install dependencies
+        run: npm ci
+      - name: Release
         env:
-          # Use a token to publish to NPM. See below for how to set it up
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
