--- a/package.json
+++ b/package.json
@@ -54,7 +54,13 @@
     "styled-components": "^5.3.0",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^9.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "semantic-release": "^19.0.2"
   },
   "resolutions": {
     "@types/react": "^17.0.5"
